Created header with basic search bar

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <div class="main">
-        
-    </div>
+    <header class="header">
+        <div class="search-container">
+            <label for="search-bar"><img src=""></label>
+            <input type="text" id="search-field" class="search-input">
+        </div>
+    </header>
 </body>
 </html>
