Created img folder and added search icon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="search-container">
-            <label for="search-bar"><img src=""></label>
+            <label for="search-bar"><img src="./img/search-icon.png"></label>
             <input type="text" id="search-field" class="search-input">
         </div>
     </header>
