Created side bar with icons

--- a/index.html
+++ b/index.html
@@ -10,10 +10,28 @@
 </head>
 <body>
     <header class="header">
+        <div class="profile">
+            <!-- Add profile image and name -->
+        </div>
         <div class="search-container">
             <label for="search-bar"><img src="./img/search-icon.png"></label>
             <input type="text" id="search-field" class="search-input">
         </div>
     </header>
+
+    <nav class="sidebar">
+        <ul>
+            <li><img src="./img/home-icon.png" alt="home"><span>Home</span></li>
+            <li><img src="./img/profile-icon.png" alt="Profile"><span>Profile</span></li>
+            <li><img src="./img/messages-icon.png" alt="Messages"><span>Messages</span></li>
+            <li><img src="./img/history-icon.png" alt="History"><span>History</span></li>
+            <li><img src="./img/tasks-icon.png" alt="Tasks"><span>Tasks</span></li>
+            <li><img src="./img/communities-icon.png" alt="Communities"><span>Communities</span></li>
+            <!-- Separate these -->
+            <li></li><img src="./img/settings-icon.png" alt="Settings"><span>Settings</span></li>
+            <li><img src="./img/privacy-icon.png" alt="Privacy"><span>Privacy</span></li>
+            <li><img src="./img/support-icon.png" alt="Support"><span>Support</span></li>
+        </ul>
+    </nav>
 </body>
 </html>
