Created Announcements and Trending sections

--- a/index.html
+++ b/index.html
@@ -33,5 +33,43 @@
             <li><img src="./img/support-icon.png" alt="Support"><span>Support</span></li>
         </ul>
     </nav>
+
+    <div class="announcements">
+        <h2>Announcements</h2>
+
+        <div class="ann-item">
+            <h3>Site Maintenance</h3>
+        </div>
+
+        <div class="ann-item">
+            <h3>Community Share Day</h3>
+        </div>
+
+        <div class="ann-item">
+            <h3>Updated Privacy Policy</h3>
+        </div>
+
+    </div>
+
+    <div class="trending">
+        <h2>Trending</h2>
+        
+        <div class="trending-item">
+            <h3>Trending Item1</h3>
+        </div>
+
+        <div class="trending-item">
+            <h3>Trending Item2</h3>
+        </div>
+
+        <div class="trending-item">
+            <h3>Trending Item3</h3>
+        </div>
+
+        <div class="trending-item">
+            <h3>Trending Item4</h3>
+        </div>
+
+    </div>
 </body>
 </html>
