--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <header class="header">
         <div class="profile">
             <!-- Add profile image and name -->
+            <img src="./img/profile-icon.png">
+            <p>Hello!</p>
         </div>
         <div class="search-container">
             <label for="search-bar"><img src="./img/search-icon.png"></label>
