Styled sidebar as grid

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <nav class="sidebar">
-        <ul>
+        <ul class="sidebar-grid">
             <li><img src="./img/home-icon.png" alt="home"><span>Home</span></li>
             <li><img src="./img/profile-icon.png" alt="Profile"><span>Profile</span></li>
             <li><img src="./img/messages-icon.png" alt="Messages"><span>Messages</span></li>
@@ -30,7 +30,7 @@
             <li><img src="./img/tasks-icon.png" alt="Tasks"><span>Tasks</span></li>
             <li><img src="./img/communities-icon.png" alt="Communities"><span>Communities</span></li>
             <!-- Separate these -->
-            <li></li><img src="./img/settings-icon.png" alt="Settings"><span>Settings</span></li>
+            <li><img src="./img/settings-icon.png" alt="Settings"><span>Settings</span></li>
             <li><img src="./img/privacy-icon.png" alt="Privacy"><span>Privacy</span></li>
             <li><img src="./img/support-icon.png" alt="Support"><span>Support</span></li>
         </ul>
