--- a/index.html
+++ b/index.html
@@ -36,6 +36,45 @@
         </ul>
     </nav>
 
+    <main class="main-content">
+
+        <h2>Your Projects</h2>
+        <div class="projects-grid">
+
+            <div class="project">
+                <h3>Project 1 Title</h3>
+                <p>Project 1 Description<p>
+            </div>
+
+            <div class="project">
+                <h3>Project 2 Title</h3>
+                <p>Project 2 Description<p>
+            </div>
+
+            <div class="project">
+                <h3>Project 3 Title</h3>
+                <p>Project 3 Description<p>
+            </div>
+
+            <div class="project">
+                <h3>Project 4 Title</h3>
+                <p>Project 4 Description<p>
+            </div>
+
+            <div class="project">
+                <h3>Project 5 Title</h3>
+                <p>Project 5 Description<p>
+            </div>
+            
+            <div class="project">
+                <h3>Project 6 Title</h3>
+                <p>Project 6 Description<p>
+            </div>
+
+        </div>
+
+    </main>
+
     <div class="announcements">
         <h2>Announcements</h2>
 
