--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h3>Project 5 Title</h3>
                 <p>Project 5 Description<p>
             </div>
-            
+
             <div class="project">
                 <h3>Project 6 Title</h3>
                 <p>Project 6 Description<p>
@@ -80,14 +80,17 @@
 
         <div class="ann-item">
             <h3>Site Maintenance</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla euismod.</p>
         </div>
 
         <div class="ann-item">
             <h3>Community Share Day</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla euismod.</p>
         </div>
 
         <div class="ann-item">
             <h3>Updated Privacy Policy</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla euismod.</p>
         </div>
 
     </div>
