Separated dashboard items

--- a/index.html
+++ b/index.html
@@ -22,22 +22,68 @@
     </header>
 
     <nav class="sidebar">
+
         <div class="logo">
             <img src="./img/home-icon.png">
             <h2>Dashboard</h2>
         </div>
-        <ul class="sidebar-grid">
-            <li><img src="./img/home-icon.png" alt="home"><span>Home</span></li>
-            <li><img src="./img/profile-icon.png" alt="Profile"><span>Profile</span></li>
-            <li><img src="./img/messages-icon.png" alt="Messages"><span>Messages</span></li>
-            <li><img src="./img/history-icon.png" alt="History"><span>History</span></li>
-            <li><img src="./img/tasks-icon.png" alt="Tasks"><span>Tasks</span></li>
-            <li><img src="./img/communities-icon.png" alt="Communities"><span>Communities</span></li>
-            <!-- Separate these -->
-            <li><img src="./img/settings-icon.png" alt="Settings"><span>Settings</span></li>
-            <li><img src="./img/privacy-icon.png" alt="Privacy"><span>Privacy</span></li>
-            <li><img src="./img/support-icon.png" alt="Support"><span>Support</span></li>
-        </ul>
+
+        <div class="main-links">
+            <ul>
+                <li>
+                    <img src="./img/home-icon.png" alt="home">
+                    <p>Home</p>
+                </li>
+                
+                <li>
+                    <img src="./img/profile-icon.png" alt="Profile">
+                    <p>Profile</p>
+                </li>
+
+                <li>
+                    <img src="./img/messages-icon.png" alt="Messages">
+                    <p>Messages</p>
+                </li>
+
+                <li>
+                    <img src="./img/history-icon.png" alt="History">
+                    <p>History</p>
+                </li>
+
+                <li>
+                    <img src="./img/tasks-icon.png" alt="Tasks">
+                    <p>Tasks</p>
+                </li>
+                
+                <li>
+                    <img src="./img/communities-icon.png" alt="Communities">
+                    <p>Communities</p>
+                </li>
+
+
+            </ul>
+        </div>
+
+
+        <div class="secondary-links"></div>
+            <ul>
+
+                <li>
+                    <img src="./img/settings-icon.png" alt="Settings">
+                    <p>Settings</p>
+                </li>
+
+                <li>
+                    <img src="./img/privacy-icon.png" alt="Privacy">
+                    <p>Privacy</p>
+                </li>
+
+                <li>
+                    <img src="./img/support-icon.png" alt="Support">
+                    <p>Support</p>
+                </li>
+
+            </ul>
     </nav>
 
     <main class="main-content">
