--- a/index.html
+++ b/index.html
@@ -88,40 +88,53 @@
 
     <main class="main-content">
 
-        <h2>Your Projects</h2>
-        <div class="projects-grid">
+        <div class="projects-div">
+            <h2>Your Projects</h2>
 
             <div class="project">
-                <h3>Project 1 Title</h3>
-                <p>Project 1 Description<p>
+                <div class="project-text">
+                    <h3 class="title">Project Title #1</h3>
+                    <p>Some descrpitive text here</p>
+                </div>
             </div>
 
             <div class="project">
-                <h3>Project 2 Title</h3>
-                <p>Project 2 Description<p>
+                <div class="project-text">
+                    <h3 class="title">Project Title #2</h3>
+                    <p>Some descrpitive text here</p>
+                </div>
             </div>
 
             <div class="project">
-                <h3>Project 3 Title</h3>
-                <p>Project 3 Description<p>
+                <div class="project-text">
+                    <h3 class="title">Project Title #3</h3>
+                    <p>Some descrpitive text here</p>
+                </div>
             </div>
 
             <div class="project">
-                <h3>Project 4 Title</h3>
-                <p>Project 4 Description<p>
+                <div class="project-text">
+                    <h3 class="title">Project Title #4</h3>
+                    <p>Some descrpitive text here</p>
+                </div>
             </div>
 
             <div class="project">
-                <h3>Project 5 Title</h3>
-                <p>Project 5 Description<p>
+                <div class="project-text">
+                    <h3 class="title">Project Title #5</h3>
+                    <p>Some descrpitive text here</p>
+                </div>
             </div>
 
             <div class="project">
-                <h3>Project 6 Title</h3>
-                <p>Project 6 Description<p>
+                <div class="project-text">
+                    <h3 class="title">Project Title #6</h3>
+                    <p>Some descrpitive text here</p>
+                </div>
             </div>
 
         </div>
+
 
         <div class="ann-and-trending">
             <div class="announcements">
