Created and styled profile section

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 </head>
 <body>
     <header class="header">
+
         <div class="search-container">
             <label for="search-bar"><img src="./img/search-icon.png"></label>
             <input type="text" id="search-field" class="search-input">
         </div>
+
+        <div class="profile-container">
+            <img class="profile-img" src="./img/profile-icon.png" alt="profile img">
+            <img class="notification-img" src="./img/messages-icon.png" alt="profile img">
+            <h3 class="username">User Name</h3>
+        </div>
+
     </header>
 
     <nav class="sidebar">
