Created main profile area and buttons area

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
             <h3 class="username">User Name</h3>
         </div>
 
+        <div class="main-profile-container">
+            <img class="main-profile-img" src="./img/profile-icon.png" alt="main profile image">
+            <p class="welcome-text">Hi there,</p>
+            <p class="main-user-name">Username (@tag)</p>
+        </div>
+
+        <div class="buttons-container">
+            <button class="header-btn">New</button>
+            <button class="header-btn">Upload</button>
+            <button class="header-btn">Share</button>
+        </div>
+
     </header>
 
     <nav class="sidebar">
