Added dashboard icon

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <nav class="sidebar">
 
         <div class="logo">
-            <img src="./img/home-icon.png">
+            <img src="./img/dash-icon.png">
             <h2>Dashboard</h2>
         </div>
 
