--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <div class="profile-container">
             <img class="profile-img" src="./img/profile-icon.png" alt="profile img">
             <img class="notification-img" src="./img/messages-icon.png" alt="profile img">
-            <h3 class="username">User Name</h3>
+            <h3 class="username">snt14</h3>
         </div>
 
         <div class="main-profile-container">
             <img class="main-profile-img" src="./img/profile-icon.png" alt="main profile image">
-            <p class="welcome-text">Hi there,</p>
-            <p class="main-user-name">Username (@tag)</p>
+            <p class="welcome-text">Greetings,</p>
+            <p class="main-user-name">madspecco (@snt14)</p>
         </div>
 
         <div class="buttons-container">
