Modified projects text

--- a/index.html
+++ b/index.html
@@ -108,43 +108,49 @@
 
             <div class="project">
                 <div class="project-text">
-                    <h3 class="title">Project Title #1</h3>
-                    <p>Some descrpitive text here</p>
+                    <h3 class="title">My very first project</h3>
+                    <p>A recipe page made up entirely of HTML content</p>
+                    <p>(it looks pretty bad)</p>
                 </div>
             </div>
 
             <div class="project">
                 <div class="project-text">
-                    <h3 class="title">Project Title #2</h3>
-                    <p>Some descrpitive text here</p>
+                    <h3 class="title">Rock, Paper, Scissors Game</h3>
+                    <p>Yet another project, this time HTML was combined</p>
+                    <p>with CSS and JavaScript</p>
+                    <p>in order to produce this beauty</p>
                 </div>
             </div>
 
             <div class="project">
                 <div class="project-text">
-                    <h3 class="title">Project Title #3</h3>
-                    <p>Some descrpitive text here</p>
+                    <h3 class="title">Calculator</h3>
+                    <p>Pretty self-explanatory</p>
+                    <p>This one took a while to create but it paid off in the end</p>
                 </div>
             </div>
 
             <div class="project">
                 <div class="project-text">
-                    <h3 class="title">Project Title #4</h3>
-                    <p>Some descrpitive text here</p>
+                    <h3 class="title">Etch-a-Sketch</h3>
+                    <p>A page where you can color up a grid of squares</p>
+                    <p>(which is also resizable, pretty neat)</p>
                 </div>
             </div>
 
             <div class="project">
                 <div class="project-text">
-                    <h3 class="title">Project Title #5</h3>
-                    <p>Some descrpitive text here</p>
+                    <h3 class="title">Landing Page Project</h3>
+                    <p>This one is a webpage in which I have learned how to</p>
+                    <p>style HTML elements using CSS for the first time</p>
                 </div>
             </div>
 
             <div class="project">
                 <div class="project-text">
-                    <h3 class="title">Project Title #6</h3>
-                    <p>Some descrpitive text here</p>
+                    <h3 class="title">Form Sign-up Page</h3>
+                    <p>A page representing a mock-up of a form application</p>
                 </div>
             </div>
 
