--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
             <div class="project">
                 <div class="project-text">
                     <h3 class="title">Rock, Paper, Scissors Game</h3>
-                    <p>Yet another project, this time HTML was combined</p>
-                    <p>with CSS and JavaScript</p>
-                    <p>in order to produce this beauty</p>
+                    <p>Yet another project, this time HTML was combined with CSS and JavaScript in order to produce this beauty</p>
                 </div>
             </div>
 
@@ -142,8 +140,7 @@
             <div class="project">
                 <div class="project-text">
                     <h3 class="title">Landing Page Project</h3>
-                    <p>This one is a webpage in which I have learned how to</p>
-                    <p>style HTML elements using CSS for the first time</p>
+                    <p>This one is a webpage in which I have learned how to style HTML elements using CSS for the first time</p>
                 </div>
             </div>
 
