Optimized letter spacing and font sizes

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
             <div class="project">
                 <div class="project-text">
-                    <h3 class="title">Rock, Paper, Scissors Game</h3>
+                    <h3 class="title">Rock, Paper, Scissors</h3>
                     <p>Yet another project, this time HTML was combined with CSS and JavaScript in order to produce this beauty</p>
                 </div>
             </div>
