Modified announcements text

--- a/index.html
+++ b/index.html
@@ -161,18 +161,18 @@
                 <div class="ann-content">
 
                     <div class="ann-item">
-                        <h3>Site Maintenance</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla euismod.</p>
+                        <h3>Recipe Project Remastered</h3>
+                        <p>The recipe website has been updated. Looking better than ever! (not)</p>
                     </div>
             
                     <div class="ann-item">
-                        <h3>Community Share Day</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla euismod.</p>
+                        <h3>Fron-end Rookie Gets Inspired</h3>
+                        <p>After nearly a one year hiatus, this beginner has found his inspiration!</p>
                     </div>
             
                     <div class="ann-item">
-                        <h3>Updated Privacy Policy</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla euismod.</p>
+                        <h3>More Projects</h3>
+                        <p>Reliable sources (me) tell that more (and better!) projects have been confirmed to appear in the future. Stay tuned!</p>
                     </div>
 
                 </div>
