Modified trending section

--- a/index.html
+++ b/index.html
@@ -183,19 +183,23 @@
                 <h2>Trending</h2>
                 <div class="trending-content">
                     <div class="trend">
-                        <h3>Trending Item1</h3>
+                        <img src="./img/privacy-icon.png">
+                        <h3>Conceptualization</h3>
                     </div>
 
                     <div class="trend">
-                        <h3>Trending Item2</h3>
+                        <img src="./img/privacy-icon.png">
+                        <h3>Savoir-Faire</h3>
                     </div>
 
                     <div class="trend">
-                        <h3>Trending Item3</h3>
+                        <img src="./img/privacy-icon.png">
+                        <h3>Encyclopedia</h3>
                     </div>
 
                     <div class="trend">
-                        <h3>Trending Item4</h3>
+                        <img src="./img/privacy-icon.png">
+                        <h3>Volition</h3>
                     </div>
 
                 </div>
