--- a/index.html
+++ b/index.html
@@ -108,9 +108,11 @@
 
             <div class="project">
                 <div class="project-text">
-                    <h3 class="title">My very first project</h3>
-                    <p>A recipe page made up entirely of HTML content</p>
-                    <p>(it looks pretty bad)</p>
+                    <a href="https://github.com/madspecco/recipes" target="_blank">
+                        <h3 class="title">My very first project</h3>
+                        <p>A recipe page made up entirely of HTML content</p>
+                        <p>(it looks pretty bad)</p>
+                    </a>
                 </div>
             </div>
 
