Added links to project cards

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="projects-div">
             <h2>Your Projects</h2>
 
-            <div class="project">
+            <div class="project" style="cursor: pointer;" onclick="window.open('https://github.com/madspecco/recipes', '_blank')">
                 <div class="project-text">
                     <a href="https://github.com/madspecco/recipes" target="_blank">
                         <h3 class="title">My very first project</h3>
@@ -116,40 +116,50 @@
                 </div>
             </div>
 
-            <div class="project">
+            <div class="project" style="cursor: pointer;" onclick="window.open('https://github.com/madspecco/rock-paper-scissors', '_blank')">
                 <div class="project-text">
-                    <h3 class="title">Rock, Paper, Scissors</h3>
-                    <p>Yet another project, this time HTML was combined with CSS and JavaScript in order to produce this beauty</p>
+                    <a href="https://github.com/madspecco/rock-paper-scissors" target="_blank">
+                        <h3 class="title">Rock, Paper, Scissors</h3>
+                        <p>Yet another project, this time HTML was combined with CSS and JavaScript in order to produce this beauty</p>
+                    </a>
                 </div>
             </div>
 
-            <div class="project">
+            <div class="project" style="cursor: pointer;" onclick="window.open('https://github.com/madspecco/calculator', '_blank')">
                 <div class="project-text">
-                    <h3 class="title">Calculator</h3>
-                    <p>Pretty self-explanatory</p>
-                    <p>This one took a while to create but it paid off in the end</p>
+                    <a href="https://github.com/madspecco/calculator" target="_blank">
+                        <h3 class="title">Calculator</h3>
+                        <p>Pretty self-explanatory</p>
+                        <p>This one took a while to create but it paid off in the end</p>
+                    </a>
                 </div>
             </div>
 
-            <div class="project">
+            <div class="project" style="cursor: pointer;" onclick="window.open('https://github.com/madspecco/etchy-sketchy', '_blank')">
                 <div class="project-text">
-                    <h3 class="title">Etch-a-Sketch</h3>
-                    <p>A page where you can color up a grid of squares</p>
-                    <p>(which is also resizable, pretty neat)</p>
+                    <a href="https://github.com/madspecco/etchy-sketchy" target="_blank">
+                        <h3 class="title">Etch-a-Sketch</h3>
+                        <p>A page where you can color up a grid of squares</p>
+                        <p>(which is also resizable, pretty neat)</p>
+                    </a>
                 </div>
             </div>
 
-            <div class="project">
+            <div class="project" style="cursor: pointer;" onclick="window.open('https://github.com/madspecco/landing-parrots', '_blank')">
                 <div class="project-text">
-                    <h3 class="title">Landing Page Project</h3>
-                    <p>This one is a webpage in which I have learned how to style HTML elements using CSS for the first time</p>
+                    <a href="https://github.com/madspecco/landing-parrots" target="_blank">
+                        <h3 class="title">Landing Page Project</h3>
+                        <p>This one is a webpage in which I have learned how to style HTML elements using CSS for the first time</p>
+                    </a>
                 </div>
             </div>
 
-            <div class="project">
+            <div class="project" style="cursor: pointer;" onclick="window.open('https://github.com/madspecco/form-app', '_blank')">
                 <div class="project-text">
-                    <h3 class="title">Form Sign-up Page</h3>
-                    <p>A page representing a mock-up of a form application</p>
+                    <a href="https://github.com/madspecco/form-app" target="_blank">
+                        <h3 class="title">Form Sign-up Page</h3>
+                        <p>A page representing a mock-up of a form application</p>
+                    </a>
                 </div>
             </div>
 
