--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                     </div>
             
                     <div class="ann-item">
-                        <h3>Fron-end Rookie Gets Inspired</h3>
-                        <p>After nearly a one year hiatus, this beginner has found his inspiration!</p>
+                        <h3>Front-end Rookie Gets Inspired</h3>
+                        <p>After nearly a one year hiatus, this beginner has (re)found his inspiration!</p>
                     </div>
             
                     <div class="ann-item">
