added icons and styled buttons

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </div>
 
         <div class="profile-container">
-            <img class="profile-img" src="./img/profile-icon.png" alt="profile img">
+            <img class="profile-img" src="./img/kim.png" alt="profile img">
             <img class="notification-img" src="./img/messages-icon.png" alt="profile img">
             <h3 class="username">snt14</h3>
         </div>
 
         <div class="main-profile-container">
-            <img class="main-profile-img" src="./img/profile-icon.png" alt="main profile image">
+            <img class="main-profile-img" src="./img/kim.png" alt="main profile image">
             <p class="welcome-text">Greetings,</p>
             <p class="main-user-name">madspecco (@snt14)</p>
         </div>
@@ -195,22 +195,22 @@
                 <h2>Trending</h2>
                 <div class="trending-content">
                     <div class="trend">
-                        <img src="./img/privacy-icon.png">
+                        <img src="./img/conceptualization.png">
                         <h3>Conceptualization</h3>
                     </div>
 
                     <div class="trend">
-                        <img src="./img/privacy-icon.png">
+                        <img src="./img/savoir-faire.png">
                         <h3>Savoir-Faire</h3>
                     </div>
 
                     <div class="trend">
-                        <img src="./img/privacy-icon.png">
+                        <img src="./img/encyclopedia.png">
                         <h3>Encyclopedia</h3>
                     </div>
 
                     <div class="trend">
-                        <img src="./img/privacy-icon.png">
+                        <img src="./img/volition.png">
                         <h3>Volition</h3>
                     </div>
 
